--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "African Stories from storybookscanada.ca",
   "main": "index.html",
   "scripts": {
-    "devserver": "live-server --no-browser",
+    "devserver": "live-server public --no-browser",
     "watch:sass": "sass --watch public/sass/main.scss:public/styles/style.css",
-    "start": "npm-run-all --parallel watch:sass devserver "
+    "dev": "npm-run-all --parallel watch:sass devserver ",
+    "start": "serve public -l tcp://0.0.0.0:${PORT}"
   },
   "author": "Patrick Harley Semple",
   "license": "ISC",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "sass": "^1.82.0"
+  },
+  "dependencies": {
+    "serve": "^14.2.4"
   }
 }
