--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "African Stories from storybookscanada.ca",
   "main": "index.html",
   "scripts": {
-    "devserver": "live-server public --no-browser",
+    "devserver": "live-server public --port=3000 --no-browser",
     "watch:sass": "sass --watch public/sass/main.scss:public/styles/style.css",
     "dev": "npm-run-all --parallel watch:sass devserver ",
-    "start": "serve public -l tcp://0.0.0.0:${PORT}"
+    "start": "serve public -l tcp://0.0.0.0:${PORT} --single --no-clean-urls"
   },
   "author": "Patrick Harley Semple",
   "license": "ISC",
