Still chasing the URL problem. This time in home/pagehandler.js line 26:  const storyUrl = `/story.html?storyid=${storyId}`;

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "African Stories from storybookscanada.ca",
   "main": "index.html",
   "scripts": {
-    "devserver": "live-server public --port=3000 --no-browser",
+    "devserver": "live-server public  --no-browser",
     "watch:sass": "sass --watch public/sass/main.scss:public/styles/style.css",
     "dev": "npm-run-all --parallel watch:sass devserver ",
     "start": "serve public -l tcp://0.0.0.0:${PORT}"
